# EvoLoRA

./: .env.example  .gitignore  IMPLEMENT.md  README.md  pyproject.toml  test_gemini.py
agent/: planner.py
docs/: ARCHITECTURE.md  HACKATHON_SUBMISSION.md  VIDEO_PLAN.md
docs/superpowers/specs/: 2026-06-27-evolora-voice-design.md
scripts/vm/: baseline_evaluate.py  evaluate.py
src/evolora/: __init__.py  cli.py  config.py
src/evolora/agent/: __init__.py  planner.py  tools.py
src/evolora/demo/: __init__.py  task.py
src/evolora/evaluation/: __init__.py  digitalocean_judge.py  evaluator.py  gemini_judge.py  llm_judge.py  locked.py
src/evolora/inference/: __init__.py
src/evolora/models/: __init__.py  core.py  events.py
src/evolora/observability/: __init__.py  narrator.py  run_logger.py
src/evolora/orchestration/: orchestrator.py  retrain_advisor.py
src/evolora/persistence/: __init__.py  artifacts.py  store.py
src/evolora/training/: __init__.py  backends.py  remote_config.py  runner.py
src/evolora/tui/: __init__.py  app.py
src/evolora/voice/: __init__.py  audio_io.py  dictation.py  narrator.py  (+2 more)
src/virtual_machine_code/: chat.py  config.json  evaluate.py  train.py
tests/: test_create_evals_tool.py  test_digitalocean_judge.py  test_evals.py  test_evaluation.py  test_goal.py  test_llm_judge.py  test_models.py  test_narrator.py  test_orchestrator.py  test_persistence.py  test_planner.py  test_remote_config.py  test_remote_runner.py  test_remote_training_backend.py  test_run_logger.py  test_tools.py  test_tui.py  test_vm_eval_flow.py  test_voice.py
(+2 files in other folders)
