[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolora"
version = "0.1.0"
description = "Auditable bounded self-improvement loop via LoRA fine-tuning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "openai>=1.30",
    "typer>=0.12",
    "textual>=0.63",
    "pymongo>=4.7",
    "motor>=3.4",
    "paramiko>=3.4",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "httpx>=0.27",
    "paramiko>=3.4",
    "google-genai>=1.0",
]

[project.optional-dependencies]
unsloth = [
    "unsloth",
    "torch",
    "transformers",
    "datasets",
    "trl",
]

[project.scripts]
evolora = "evolora.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evolora"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
